[project]
name = "yahoo-finance-server"
version = "0.1.1"
description = "Let your AI get comprehensive stock market data from Yahoo Finance including quotes, news, financials, and more."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["yahoo-finance", "stocks", "market-data", "mcp", "ai", "trading", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.9.3",
    "yfinance==0.2.62",
    "requests>=2.31.0",
    "pandas>=2.0.0",
]

[[project.authors]]
name = "Robin"
email = "robin@agentx.so"

[project.urls]
Homepage = "https://github.com/AgentX-ai/AgentX-mcp-servers"
Repository = "https://github.com/AgentX-ai/AgentX-mcp-servers"
Documentation = "https://github.com/AgentX-ai/AgentX-mcp-servers#readme"
Issues = "https://github.com/AgentX-ai/AgentX-mcp-servers/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
yahoo-finance-server = "yahoo_finance_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yahoo_finance_server"]

[tool.uvx]
namespace = "agentx" 